--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.datasource.password=62418asdfa
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments = true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=21fi.a.klishch@std.npu.edu.ua
+spring.mail.password=jmmqohltfglbyqrs
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
